<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainFormFragment">

    <ScrollView
        android:id="@+id/fragment_main_form_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_main_form_title"
                style="@style/title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_title" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/card_background"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/subtitle_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/format" />

                        <Spinner
                            android:id="@+id/fragment_main_form_format"
                            style="@style/spinner_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/subtitle_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/appid" />

                        <EditText
                            android:id="@+id/fragment_main_form_appid"
                            style="@style/input_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/appid_hint"
                            android:inputType="number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/subtitle_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/uid" />

                        <EditText
                            android:id="@+id/fragment_main_form_uid"
                            style="@style/input_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/uid_hint"
                            android:inputType="text" />
                    </LinearLayout>
                    <!-- Could just use the device locale, but I want to give the user the option to change it -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/subtitle_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/locale" />

                        <Spinner
                            android:id="@+id/fragment_main_form_locale"
                            style="@style/spinner_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                    <!-- Showing current OS Version since it may be important for the user -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/subtitle_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/os_version" />

                        <TextView
                            android:id="@+id/fragment_main_form_os_version"
                            style="@style/data_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                    <!-- Not showing current timestamp, it doesn't seem important for the user -->
                    <!-- Not need to show hashtag to the user -->
                    <!-- Showing Google advertising ID since it may be important for the user -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/subtitle_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/google_ad_id" />

                        <TextView
                            android:id="@+id/fragment_main_form_google_ad_id"
                            style="@style/data_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                    <!-- Showing Google advertising ID since it may be important for the user -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/subtitle_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/google_ad_limited"
                            android:textSize="@dimen/small_subtitle" />

                        <TextView
                            android:id="@+id/fragment_main_form_google_ad_limited"
                            style="@style/data_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/fragment_main_form_advanced"
                        style="@style/link_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/advanced" />

                    <LinearLayout
                        android:id="@+id/fragment_main_form_advanced_options"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/card_margin"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/fragment_main_form_advanced_title"
                            style="@style/subtitle_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/advanced_title" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/send_ip"
                                style="@style/checkbox_style" />

                            <TextView
                                style="@style/subtitle_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="@string/ip" />

                            <EditText
                                android:id="@+id/fragment_main_form_ip"
                                style="@style/input_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:digits="0,1,2,3,4,5,6,7,8,9,."
                                android:inputType="number" />
                        </LinearLayout>
                        <!-- User should enter custom parameters as comma separated values. I know I can do better, but should have more time -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/send_custom_parameters"
                                style="@style/checkbox_style" />

                            <TextView
                                style="@style/subtitle_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="@string/custom_parameters"
                                android:textSize="@dimen/small_subtitle" />

                            <EditText
                                android:id="@+id/fragment_main_form_custom_parameters"
                                style="@style/input_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:hint="@string/custom_parameters_hint"
                                android:inputType="text" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/send_page"
                                style="@style/checkbox_style" />

                            <TextView
                                style="@style/subtitle_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="@string/page" />

                            <EditText
                                android:id="@+id/fragment_main_form_page"
                                style="@style/input_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:hint="@string/page_hint"
                                android:inputType="number" />
                        </LinearLayout>
                        <!-- User should enter offer types as comma separated values -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/send_offer_types"
                                style="@style/checkbox_style" />

                            <TextView
                                style="@style/subtitle_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="@string/offer_types"
                                android:textSize="@dimen/small_subtitle" />

                            <EditText
                                android:id="@+id/fragment_main_form_offer_types"
                                style="@style/input_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:digits="0,1,2,3,4,5,6,7,8,9,,"
                                android:hint="@string/offer_types_hint"
                                android:inputType="number" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/send_ps_time"
                                style="@style/checkbox_style" />

                            <TextView
                                style="@style/subtitle_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="@string/ps_time" />

                            <TextView
                                android:id="@+id/fragment_main_form_ps_time"
                                style="@style/data_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/send_device"
                                style="@style/checkbox_style" />

                            <TextView
                                style="@style/subtitle_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="@string/device" />

                            <TextView
                                android:id="@+id/fragment_main_form_device"
                                style="@style/data_style"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
